--- a/src/App.css
+++ b/src/App.css
@@ -125,7 +125,9 @@ h1 {
 }
 @media screen and (max-width: 768px) {
   h1 {
-    font-size: 24px;
+    font-size: 28px;
+    margin-left: 5px;
+    margin-right: 5px;
   }
 
   .star {
